# fpnla

./: LICENSE  README.md  fpnla.cabal
src/FPNLA/: Matrix.hs  Matrix_M.hs  Utils.hs
src/FPNLA/Matrix/: Utils.hs
src/FPNLA/Operations/: BLAS.hs  BLAS_M.hs  LAPACK.hs  Parameters.hs
