name: fpnla
version: 0.1.1
cabal-version: >=1.2
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Universidad de la República, Uruguay
maintainer: Pablo Perdomo <pperdomo@fing.edu.uy>, Mauro Blanco <mblanco@fing.edu.uy>
stability: Experimental
synopsis: A library for NLA operations
description:
    .
    This package defines a framework for linear algebra operations, allowing:
    .
    - Definition of multiple instances of BLAS and LAPACK operations.
    .
    - Definition of multiple representations of vectors and matrices.
    .
    - Arbitrary combination of strategies and structure representations.
    .
    - Type-safe manipulation of context information associated to each strategy.
    .
    - Definition of specialized strategies for a given representation.
    .
    The framework is based on BLAS (<http://www.netlib.org/blas/>) and LAPACK (<http://www.netlib.org/lapack/>) linear algebra libraries, as these are well known libraries in the area. For this reason the design of the framework is strongly oriented to these libraries. Anyway it is possible to easily define operations not considered in these libraries and still maintaining the above properties.
    .
    Many representations and strategy definitions (from which many are parallel) can be found in the @fpnla-examples@ (<http://hackage.haskell.org/package/fpnla-examples>) package.
    .
    Details about the package may be found in the paper: Towards a functional run-time for dense NLA domain. In Proceedings of the 2Nd ACM SIGPLAN Workshop on
    Functional High-performance Computing. New York, NY, USA. ACM, pages 85-96 (<http://www.fing.edu.uy/~mviera/papers/fhpc13.pdf>).
    .
category: Math
author: Mauro Blanco, Pablo Perdomo, Pablo Ezzatti, Alberto Pardo, Marcos Viera
tested-with: GHC ==7.6.3

library
    exposed-modules:
        FPNLA.Matrix
        FPNLA.Matrix.Utils
        FPNLA.Matrix_M
        FPNLA.Operations.BLAS
        FPNLA.Operations.BLAS_M
        FPNLA.Operations.LAPACK
        FPNLA.Operations.Parameters
    build-depends:
        base >=4 && <5
    hs-source-dirs: src
    other-modules:
        FPNLA.Utils
    ghc-options: -Wall -fno-warn-orphans

